# openview

./: CMakeLists.txt  ComboBox.qml  DataModel.qml  FileDialog.qml  LICENSE  QVTKInteractor.h  QVTKQuickItem.cxx  QVTKQuickItem.h  README  UIText.qml  ViewModel.qml  examples.js  examples.json  index.html  main.cxx  main.mm  main.qml  ovAlgorithmItem.cxx  ovAlgorithmItem.h  ovContextInteractorStyle.cxx  ovContextInteractorStyle.h  ovGraphItem.cxx  ovGraphItem.h  ovGraphView.cxx  ovGraphView.h  ovIcicleItem.cxx  ovIcicleView.cxx  ovIcicleView.h  ovScatterPlot3DView.cxx  ovScatterPlot3DView.h  ovScatterPlotView.cxx  ovScatterPlotView.h  ovTreeView.cxx  ovTreeView.h  ovTreemapItem.cxx  ovTreemapItem.h  ovTreemapView.cxx  ovTreemapView.h  ovTreeringItem.cxx  ovTreeringItem.h  (+18 more)
OVView/: CMakeLists.txt  QVTKInteractor.cxx  QVTKPaintedItem.cxx  QVTKPaintedItem.h  QVTKQuickItem.cxx  QVTKQuickItem.h  main.cxx  ovContextInteractorStyle.h  ovGLContext.cxx  ovGLContext.h  ovGraphItem.cxx  ovGraphItem.h  ovGraphView.cxx  ovGraphView.h  ovOpenGLContext.cxx  ovOpenGLContext.h  ovRectItem.cxx  ovRectItem.h  ovScatterPlotView.cxx  ovScatterPlotView.h  ovView.cxx  ovView.h  ovViewPlugin.cxx  ovViewPlugin.h  ovViewQuickItem.cxx  ovViewQuickItem.h  qmldir  vtkEventQtSlotConnect.h
core/: CMakeLists.txt  QVTKInteractor.h  QVTKInteractorAdapter.h  QVTKQuickItem.cxx  QVTKQuickItem.h  ovCoreModule.h  vtkEventQtSlotConnect.h  vtkQtConnection.h
data/: domains.csv  mammals.tre  molecules.csv  nbc_olympic_medalscrape.csv
install/: CMakeLists.txt
scripts/: build_linux_ubuntu.sh
